--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,8 @@
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"golang.Go"
+		"GitHub.copilot",
+		"golang.Go",
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
